--- a/CodeKata/CodeKata.csproj
+++ b/CodeKata/CodeKata.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.GuardClauses" Version="1.2.7" />
     <PackageReference Include="Bogus" Version="25.0.2" />
     <PackageReference Include="Moq" Version="4.10.1" />
     <PackageReference Include="Moq.AutoMock" Version="1.2.0.120" />
